--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to AKS</title>
+  <title>Welcome to maharaja</title>
 </head>
 <body>
   <h1 style="color:blue;">Hello from AKS Cluster!</h1>
