--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Welcome to maharaja</title>
 </head>
 <body>
-  <h1 style="color:blue;">Hello from AKS Cluster!</h1>
+  <h1 style="color:green;">Hello from maharaja!</h1>
 </body>
 </html>
 
