--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to maharaja</title>
+  <title>Welcome to AKS + MySQL</title>
 </head>
 <body>
-  <h1 style="color:green;">Hello from maharaja!</h1>
+  <h1 id="msg">Loading message from DB...</h1>
+  <script>
+    fetch('/data')
+      .then(res => res.json())
+      .then(data => {
+        document.getElementById('msg').innerText = data[0]?.message || 'No data';
+      });
+  </script>
 </body>
 </html>
 
